Fixing some broken styles

--- a/src/client/src/sections/AppHeader/appHeader.scss
+++ b/src/client/src/sections/AppHeader/appHeader.scss
@@ -6,6 +6,5 @@
 .MuiTypography-root {
   &.nav--title {
     flex-grow: 1;
-    padding-top: 0.5rem;
   }
 }
